deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: cohort5-main
  name: cohort5-main
  namespace: co5website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cohort5-main
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cohort5-main
    spec:
      containers:
      - name: ctr-web
        image: nginx
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html/
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      - name: ctr-sync
        image: k8s.gcr.io/git-sync:v3.1.6
        volumeMounts:
        - name: html
          mountPath: /tmp/git
      volumes:
      - name: html
        emptyDir: {}
      - name: nginx-config-volume
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: svc-main
  namespace: co5website
spec:
  selector:
    app: cohort5-main
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
